<resources>
    <string name="app_name">NoteTaker</string>
    <string name="TitleBar">My Notes</string>
    <string name="SearchHint">Enter your search</string>
    <string name="NoteTtitle">Note Ttitle</string>
    <string name="NoteSubtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="pickColour">Pick a colour</string>
    <string name="addimage">Add Image</string>
    <string name="add_weblink">Add WebLink</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete note</string>
    <string name="Confirm_message">Are you sure you want to delete this note</string>
</resources>