<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="@dimen/_5sdp"
    android:paddingStart="@dimen/_5sdp"
    android:paddingBottom="@dimen/_3ssp"
    android:layout_margin="@dimen/_12sdp"
    android:background="@drawable/background_dialogue">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_language_24"
        android:tint="@color/Yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/latoblackitalic"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/Yellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@+id/imageAddUrl"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@null"
        android:fontFamily="@font/latoblackitalic"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="@dimen/_35sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/Yellow"
        android:textColorHint="@color/YellowLite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@+id/imageAddUrl"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/latobold"
        android:includeFontPadding="false"
        android:padding="@dimen/_5sdp"
        android:text="@string/add"
        android:textColor="@color/Green1"
        android:textSize="@dimen/_11sdp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/latobold"
        android:includeFontPadding="false"
        android:padding="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/Colour1"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"
        app:layout_constraintEnd_toStartOf="@+id/textAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>